# cmake_template

./: CMakeLists.txt
Demo/: main.cpp
Include/: header.hpp
Source/: myMethod.cpp
